bebytes/tests/compile_time/unsupported_char.stderr
error: Unsupported type for bits attribute
  --> tests/compile_time/unsupported_char.rs:12:13
   |
12 |     second: char,
   |             ^^^^
